src/index.css
/* ... */
/* macbook pro */

@media screen and (min-width: 2560px){
  .about-tag{
    font-size: 33px;
  }
  body{
    font-size: 24px;
  }
  .container{
    width: 100%;
  }
  .navbar-right>li>a{
    margin-top: 75px;
    margin-right:  125px;
    font-size: 25px;
  }
  .navbar-brand>img{
    width: 320px;
    margin-top:43px;
    margin-left: 248px;
  }
  .buttons{
    margin-top: 86px !important;
    font-size: 21px !important;
    border-radius: 18px;
  }
  .buttons>a{
    padding: 26px 38px 20px 39px !important;
  }
  .hero-tag{
    font-size: 93px !important;
    line-height: 135px !important;
    margin-top: 207px !important;
  }
  .about-tag,.hero-tag,.buttons,.socials{
    margin-left: 248px !important;
  }
  .socials{
    margin-top: 118px;
  }
  .socials>a{
    margin-right: 74px;
    font-size: 1.2em;
  }
  .about-tag{
    font-size: 33px !important;
    line-height: 68px !important;
    margin-top: 76px;
  }
  .hero-img{
    margin-top: 200px;
    width: 869px;
    height: 805px;
    margin-right: 368px;
  }
  .contact-nav{
    border-radius: 46px;
    border: 3px solid #ffffff;
    margin-top: 58px !important;
    margin-right:  248px !important;
    padding: 30px 39px !important;
  }
  .work-tag{
    font-size: 57px;
    padding-bottom: 34px;
    margin: 130px auto;
  }
  .work-container{
    width: 80%;
  }
  .thumbnail,.thumbnail:hover,.thumbnail:focus,.thumbnail:active{
    margin-right: 45px;
    margin-left: 45px;
    padding: 200px 50px;
    height: 486px;
    width: 641px;
  }
  .work-name{
    font-size: 36px;
  }
  .work-company{
    font-size: 18px;
  }
  .carousel,.test-hr{
    width: 80%;
  }
  .test-hr{
    width: 80%;
    margin: 15vh auto 25px;
  }
  .work-p{
    font-size: 30px;
    line-height: 54px;
    margin: -110px auto 30px;
  }
  .carousel-indicators li,.carousel-indicators .active{
    width: 22px;
    height: 22px;
  }
  .test-img{
    width: 270px;
    margin-top: 280px;
  }
  .test-p{
    margin-top: 150px;
    font-size: 36px;
    width: 80%;
    line-height: 69px;
  }
  .test-h{
    font-size: 36px;
    margin-top: 75px;
  }
  .item{
    min-height: 950px
  }
  .carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right, .carousel-control .icon-next, .carousel-control .icon-prev{
    font-size: 3em;
  }
  .carousel-control{
    margin-top: 10vh
  }
  .testimonial{
    padding-bottom: 50px;
  }
  .bottom{
    width: 100%;
    padding-left: 250px;
    padding-bottom: 90px;
  }
  .bottom-h3{
    font-size: 54px;
    margin: 50px auto;
  }
  .bottom-icons>a{
    margin-right: 40px;
    font-size: 1.2em;
  }
  .bottom-a{
    font-size: 36px;
    line-height: 69px;
    margin-top: 15px;
  }
  .ui-thumb>h1{
    font-size: 51px;
  }
}

@media screen and (min-width: 3500px){
  .App{
    display: none;
  }
}

